--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -3,11 +3,6 @@
  * See LICENSE in the project root for license information.
  */
 
- html,
- body {
-     width: 100%;
-     height: 100%;
-     margin: 0;
-     padding: 0;
- }
- 
+body {
+  margin-top: 10px;
+}
